# zikkurat-groth16

./: .gitignore  Glue.hs  LICENSE-APACHE-2.0  LICENSE-MIT  Load.hs  Prover.hs  README.md  Some.hs  Test.hs  Types.hs  Verifier.hs  zikkurat-groth16.cabal
cli/: CLI.hs
src/ZK/: Groth16.hs
src/ZK/Groth16/: JSON.hs  Load.hs  Prover.hs  Types.hs  Verifier.hs
src/ZK/Groth16/Aux/: Glue.hs  Some.hs  Time.hs
