Cabal-Version:        2.4
Name:                 zikkurat-groth16
Version:              0.1
Synopsis:             Groth16 SNARK prover and verifier

Description:          A standalone Groth16 prover and verifier, compatible
                      with the circom / snarkjs ecosystem.

License:              MIT OR Apache-2.0
License-files:        LICENSE-MIT
                      LICENSE-APACHE-2.0

Author:               Balazs Komuves
Copyright:            (c) 2024 Faulhorn Labs
Maintainer:           balazs.komuves (at) faulhornlabs (dot) com

Stability:            Experimental
Category:             Math, Cryptography
Tested-With:          GHC == 8.6.5, GHC == 9.0.1, GHC == 9.6.2
Build-Type:           Simple

--------------------------------------------------------------------------------

extra-source-files:     README.md

--------------------------------------------------------------------------------

source-repository head
  type:                git 
  location:            https://github.com/faulhornlabs/zikkurat-groth16

--------------------------------------------------------------------------------

Library

  Build-Depends:        base >= 4 && <5, 
                        filepath >= 1.4 && < 2.0,
                        containers >= 0.5 && < 1.0,
                        clock >= 0.8 && < 1.0,
                        zikkurat-algebra >= 0.0.1 && < 0.1,
                        zikkurat-formats-binary >= 0.1 && < 0.5

  Exposed-Modules:      ZK.Groth16
                        ZK.Groth16.Prover
                        ZK.Groth16.Verifier
                        ZK.Groth16.Load
                        ZK.Groth16.JSON
                        ZK.Groth16.Types
                        ZK.Groth16.Aux.Glue
                        ZK.Groth16.Aux.Some
                        ZK.Groth16.Aux.Time

  Other-modules:        Paths_zikkurat_groth16

  Default-Language:     Haskell2010
  Default-Extensions:   CPP, BangPatterns

  Hs-Source-Dirs:       src

  ghc-options:          -fwarn-tabs -fno-warn-unused-matches -fno-warn-name-shadowing -fno-warn-unused-imports                        

--------------------------------------------------------------------------------

executable zikkurat-groth16

  build-depends:       base >= 4 && < 5, 
                       optparse-applicative >= 0.16,
                       zikkurat-algebra >= 0.0.1 && < 0.1,
                       zikkurat-groth16

  hs-source-dirs:      cli
  main-is:             CLI.hs
  Default-Language:    Haskell2010

--------------------------------------------------------------------------------
